# rupes

./: Cargo.toml  README.md
example_files/test/: b-file.specialTXT  test2  unique.txt
example_files/test/.dot-dir/: unique2.txt
example_files/test/a-dir/: c-file.txt
example_files/test2/: unique3.txt
src/: main.rs
tests/: cli.rs
