[package]
name = "rupes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base16ct = { version = "0.2.0", features = ["alloc"] }
clap = { version = "4.5.1", features = ["derive"] }
console = "0.15.8"
indicatif = "0.17.8"
md-5 = "0.10.6"
rayon = "1.9.0"
sha2 = "0.10.8"
regex = "1.10.3"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"